# calculus_animator

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  APP_PORTING_HANDOFF.txt  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATE.md  Dockerfile  GEMINI.md  IMMEDIATE_ACTIONS.md  LICENSE  Makefile  PRODUCTION_READINESS.md  QA_AUTOMATION.md  README.md  SECURITY.md  app.py  app_main.py  auto_fix.py  bugs.txt  build_release.py  cli.py  config.py  content_jsons.txt  curriculum.txt  eslint.config.js  helicops_baseline.txt  helicops_check.py  mcp.json  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-dev.txt  (+11 more)
.gemini/: settings.json
.gemini/hooks/: block_direct_write.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_parser.md  config.yml  feature_request.yml
.github/workflows/: ci.yml  extended-quality.yml  guardrails.yml  release.yml
.helicops/: config.toml
.helicops-backup/: _drawing.93c003fb.py  _font.c1bbe290.py  algorithm.af9a5e64.py  animation_engine.a439a44e.py  architect.06f50612.py  base_agent.ee46ce93.py  bridge.d3fc6d2f.py  cli.b8c597a8.py  concept_engine.de786206.py  engine.ac658de2.py  formalizer.10d4cc6e.py  ingest.dcce2bed.py  integration.e3687c68.py  integrator.cb79c815.py  math_validator.7031b588.py  orchestrator.566cd7a1.py  pdf_extractor.b16dba24.py  pipeline.99153f15.py  router.2530854e.py  runner.45bcdc19.py  semantic_chunker.caf2e982.py  slide_render_worker.fadbc16a.py  state.98f95e42.py  step_generator.24d2e720.py  test_animation_engine.76e480a1.py  test_capacity_pagination.4001184a.py  test_e2e_ui_smoke.195690ed.py  test_fuzz_parser_extractor.d984170a.py  test_perf_smoke.8a96867f.py  test_slide_highlighting_helpers.a4b865d9.py  test_snapshot_regressions.dfbbc95f.py  tester.ef97a3c2.py  window.2a735af1.py
.helicops/audit/: guarded_writes.ndjson
.helicops/evidence/: broker_attestations.ndjson
ai_backend/: README.md
ai_backend/providers/: __init__.py  router.py
ai_backend/rag/: concept_engine.py  vector_store.py
ai_backend/routers/: tutor.py
ai_backend/services/: ingest.py
ai_tutor/: __init__.py  config.py  logging_config.py  main.py  middleware.py
ai_tutor/providers/: router.py
ai_tutor/rag/: __init__.py  concept_engine.py  vector_store.py
ai_tutor/routers/: __init__.py  api_bridge.py  settings_router.py
ai_tutor/services/: __init__.py  ingest.py
api/: bridge.py  capacity_slide_worker.py  slide_render_worker.py
core/: animation_engine.py  detector.py  extractor.py  parser.py  slide_highlighting.py  solver.py  step_generator.py
data/: calculus_library.json  concepts.db  concepts.jsonl  curriculum.json  curriculum_merged_from_txt.json  demo_problems.json  formulas.json  glossary.json  learning.json  slide_capacity_report.json  slide_capacity_report.txt  symbols.json
data/vectors/: chroma.sqlite3
docs/: AI_TUTOR_QUICKSTART.md  BUILD.md  CONTRIBUTION_SUMMARY.md  CURRICULUM_FILL_PLAYBOOK.md  OSS_INFRASTRUCTURE_SUMMARY.md  QA_AUTOMATION.md  architecture.md  code-map.md  ingestion-formalization.md  math-engine.md  mvp-generation.md  run-lifecycle.md  user-guide.md
engine/: __init__.py  repo_inventory.py  run_service.py  state.py  state_manager.py
helicops_critic/: integration.py  math_validator.py  runner.py
ingestion/: pipeline.py  validators.py
ingestion/chunking/: header_chunker.py
ingestion/extractors/: pdf_extractor.py
ingestion/formalization/: formalizer.py  llm_client.py
math_engine/: __init__.py  base_plugin.py  input_parser.py  plugin_registry.py  router.py
math_engine/plugins/calculus/: __init__.py  animation_engine.py  detector.py  extractor.py  parser.py  plugin.py  slide_highlighting.py  solver.py  step_generator.py
math_engine/plugins/combinatorics/: __init__.py  plugin.py
math_engine/plugins/graph_theory/: __init__.py  plugin.py
math_engine/plugins/linear_algebra/: __init__.py  plugin.py
mvp_generator/: orchestrator.py  validators.py
mvp_generator/agents/: algorithm.py  architect.py  base_agent.py  integrator.py  tester.py
plans/: development_plan.md
scripts/: build_release.py  run_full_qa.py  run_quality.py  run_release_checklist.py  run_tests.py  smoke_test.py
slide_renderer/: __init__.py  _drawing.py  _elements.py  _enums.py  _font.py  _themes.py  engine.py
templates/: copilot-instructions.md  curriculum_content_template.json  glossary_template.json  slide_types_reference.json
templates/agent-context/: .clinerules  .cursorrules  AGENTS.md  APP.md  CLAUDE.md  INITIAL.md
templates/languages/: README.md
templates/workflows/: deploy.yml  pr-validation.yml  scheduled.yml
tests/: __init__.py  conftest.py  test_animation_engine.py  test_backend_hardening.py  test_bridge_contracts.py  test_capacity_pagination.py  test_capacity_worker_render.py  test_curriculum_regressions.py  test_detector.py  test_e2e_backend_smoke.py  test_e2e_ui_smoke.py  test_extractor.py  test_fuzz_parser_extractor.py  test_parser.py  test_perf_smoke.py  test_performance.py  test_slide_highlighting_helpers.py  test_slide_highlighting_regressions.py  test_slide_render_worker.py  test_snapshot_regressions.py  test_solver.py  test_solver_branches.py  test_step_generator.py
tests/fixtures/: content_jsons_sample.txt
tests/integration/: __init__.py  test_cli.py  test_e2e_pipeline.py
tests/snapshots/: demo_solver_snapshots.json  learning_slide_highlight_snapshots.json
tests/unit/: test_formalizer.py  test_formalizer_llm_client.py  test_input_parser.py  test_mvp_orchestrator.py  test_repo_inventory.py  test_run_service.py  test_schemas_and_router.py  test_state_manager.py
tools/: SLIDE_REVIEW_WORKFLOW.md  ollama_slide_reviewer.py  slide_quality_pipeline.py
training/: slide_quality_pairs.jsonl
ui/: index.html
ui/ai_tutor/: tutor-panel.js
ui/css/: styles.css
ui/js/: app.js
(+16 files in other folders)
