[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculus_animator"
version = "1.0.0"
description = "A symbolic calculus solver and animator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Ruben Sanchez"}]

dependencies = [
    "sympy>=1.12",
    "numpy>=1.24.0",
    "pywebview>=4.4.1",
    "pygame>=2.5.2",
    "requests>=2.33.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "antlr4-python3-runtime==4.11.1",
]

[project.optional-dependencies]
ai_tutor = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "black>=23.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "ai_tutor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
